--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "inventory",
     "description": "This project is really great.",
     "slug": "inventory",
-    "privacy": "public",
+    "privacy": "unlisted",
     "sdkVersion": "25.0.0",
     "platforms": ["ios", "android"],
     "version": "1.0.0",
