--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "native-base": "^2.3.7",
     "react": "16.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
+    "react-native-calendars": "^1.17.3",
+    "react-native-collapsible": "^0.10.0",
     "react-native-simple-toast": "0.0.8",
     "react-navigation": "^1.0.0-beta.27"
   }
