--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "native-base": "^2.3.7",
     "react": "16.2.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-25.0.0.tar.gz",
-    "react-native-calendars": "^1.17.3",
+    "react-native-calendars": "^1.18.2",
     "react-native-collapsible": "^0.10.0",
+    "react-native-loading-spinner-overlay": "^0.5.2",
+    "react-native-popup-dialog": "^0.11.46",
+    "react-native-scripts": "1.12.0",
     "react-native-simple-toast": "0.0.8",
+    "react-native-table-component": "^1.1.8",
     "react-navigation": "^1.0.0-beta.27"
   }
 }
